// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideBarItem > should render 1`] = `
<DocumentFragment>
  <li
    class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-pointer"
    data-testid="side-menu__item--plugin"
  >
    <div
      class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all hover:bg-theme-secondary-100 hover:text-theme-primary-700 dark:hover:bg-black dark:hover:text-theme-secondary-200"
    >
      <div
        class="mr-3 text-theme-primary-300 transition-all group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
      >
        <div>
          <div
            style="height: 20px; width: 20px;"
          />
        </div>
      </div>
      <span
        class="text-lg font-semibold"
      >
        General
      </span>
    </div>
  </li>
</DocumentFragment>
`;

exports[`SideBarItem > should render as active 1`] = `
<DocumentFragment>
  <li
    class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-default"
    data-testid="side-menu__item--plugin"
  >
    <div
      class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
    >
      <div
        class="absolute inset-y-0 left-0 w-1 rounded bg-theme-primary-600"
      />
      <div
        class="mr-3"
      >
        <div>
          <div
            style="height: 20px; width: 20px;"
          />
        </div>
      </div>
      <span
        class="text-lg font-semibold"
      >
        General
      </span>
    </div>
  </li>
</DocumentFragment>
`;
